# phyfix

./: App.tsx  CNAME  README.md  index.css  index.html  package-lock.json  package.json  pyproject.toml  replit.md  requirements.md
attached_assets/: Pasted--ROLE-OBJECTIVE-You-are-an-expert-global-education-mark_1773892804218.txt  Pasted-Act-as-an-Expert-Full-Stack-Web-Developer-and-Technical_1773504746727.txt  Pasted-Below-is-a-clear-professional-prompt-you-can-paste-dire_1773505260664.txt  Pasted-Got-it-Below-is-a-clear-practical-PRD-written-the-way-a_1768897120893.txt  Pasted-Here-is-a-detailed-and-powerful-prompt-you-can-copy-and_1769649569688.txt  Pasted-ROLE-You-are-an-expert-SEO-strategist-full-stack-develo_1773893643549.txt  Pasted-ROLE-You-are-an-expert-full-stack-web-developer-SEO-spe_1773705877429.txt  Pasted-You-are-a-senior-full-stack-developer-SEO-strategist-an_1773735375115.txt  Pasted-You-are-an-expert-full-stack-developer-and-SEO-speciali_1773849570417.txt  Pasted-You-are-an-expert-full-stack-developer-and-SEO-speciali_1773895303296.txt  google8a6929c81d71a7ec_1773734375143.html
pages/: About.tsx  Admin.tsx  BecomeTutor.tsx  BiologyQuiz.tsx  Blog.tsx  BlogPost.tsx  ChemistryQuiz.tsx  Contact.tsx  Dashboard.tsx  Home.tsx  HowItWorks.tsx  Login.tsx  Practice.tsx  Pricing.tsx  Privacy.tsx  Refund.tsx  Resources.tsx  Subjects.tsx  TeacherList.tsx  TeacherProfile.tsx  Terms.tsx  TopicPage.tsx
public/: robots.txt  site.webmanifest  sitemap.xml
seo/: audit.py  config.py  link_mapper.py  meta_generator.py  run_all.py  schema_factory.py  sitemap_gen.py
(+28 files in other folders)
